fixed issue with background image being offset to the right on mobile screens

--- a/client/src/Pages/App/App.css
+++ b/client/src/Pages/App/App.css
@@ -2,15 +2,16 @@
   height: 100vh;
   width: 100vw;
   top: 0;
+  left:0;
   position: absolute;
-  /* background-image: url("../../images/darkBackground.jpg"); */
+  background-image: url("/images/darkBackground.jpg");
   background-repeat: unset;
 }
 
 .Home {
-  height: 90%;
+  height: calc(100% - 64px);
   width: 100%;
-  margin-top: 84px;
+  margin-top: 64px;
   margin-left: auto;
   margin-right: auto;
 }
